# server/db/model/Announcement.js
@@ -21,7 +21,7 @@ var schema = new mongoose.Schema(
         },
         category: {
             type: String,
-            enum: ['Emergency', 'Logistics', 'Food', 'Event', 'Sponsored']
+            enum: ['emergency', 'logistics', 'food', 'event', 'sponsored']
         },
         isApproved: {
             type: Boolean,
@@ -69,15 +69,6 @@ schema.query.beforeNow = function() {
     });
 };
 
-// Allow us to query for announcements after a date
-schema.query.since = function(since) {
-    return this.find({
-        broadcastTime: {
-            $gte: new Date(parseInt(since || 0))
-        }
-    });
-};
-
 // Allow us to query by isApproved
 schema.query.byIsApproved = function() {
     return this.find({
@@ -98,6 +89,9 @@ schema.query.byIsPublic = function(since) {
         isApproved: true,
         isSent: true,
         broadcastTime: {
+            $lte: new Date()
+        },
+        updatedAt: {
             $gte: new Date(parseInt(since || 0))
         }
     });
